--- a/index.html
+++ b/index.html
@@ -624,9 +624,11 @@ _.fk("gb_Qf");
 
 	<font color="#000000" style="font-size:medium;font-family:times new roman,serif">
 	ALICE: Towards Understanding Adversarial Learning for Joint Distribution Matching 
-	[<a href="http://people.duke.edu/~cl319/doc/papers/nips_2017_ALICE.pdf" target="_blank" rel="nofollow">PDF</a>]</font>
-	<font color="#000000" style="font-size:medium;font-family:times new roman,serif">
-	[<a href="https://github.com/ChunyuanLI/ALICE" target="_blank" rel="nofollow">Code</a>]</font><br>
+	[<a href="http://people.duke.edu/~cl319/doc/papers/nips_2017_alice.pdf" target="_blank" rel="nofollow">PDF</a>]
+	[<a href="http://people.duke.edu/~cl319/doc/papers/nips_2017_alice_supp.pdf" target="_blank" rel="nofollow">Appendix</a>]
+	[<a href="https://arxiv.org/abs/1709.01215" target="_blank" rel="nofollow">arXiv</a>]
+	[<a href="https://github.com/ChunyuanLI/ALICE" target="_blank" rel="nofollow">Code</a>]
+	</font><br>
 	<font color="#000000" style="font-size:medium;font-family:times new roman,serif">
 	Chunyuan Li, Hao Liu, Changyou Chen, Yunchen Pu, Liqun Chen, Ricardo Henao and Lawrence Carin
 	</font>
