--- a/index.html
+++ b/index.html
@@ -592,6 +592,16 @@ _.fk("gb_Qf");
 <div style="display:block;text-align:left"><br></div>
 <div style="display:block;text-align:left"><br></div>
 
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+
 
 <div style="display:block;text-align:left"><img border="0" height="70" src="./cli_page_files/svgd_vae_logo.png" style="background-color:transparent;font-size:10pt;line-height:1.2" width="200"></div>
 
@@ -607,6 +617,8 @@ _.fk("gb_Qf");
 <div style="display:block;text-align:left"><br></div>
 <div style="display:block;text-align:left"><br></div>
 <div style="display:block;text-align:left"><br></div>
+
+
 
 
 <div style="display:block;text-align:left"><img border="0" height="70" src="./cli_page_files/weight_uncertainty.png" style="background-color:transparent;font-size:10pt;line-height:1.2" width="200"></div>
@@ -641,6 +653,18 @@ _.fk("gb_Qf");
 	<br>
 	</font><br></font>
 
+
+	<font face="times new roman, serif" size="3">Learning Structural Weight Uncertainty for Squential Decision-Making
+	<br>Ruiyi Zhang, Chunyuan Li, Changyou Chen, Lawrence Carin<br></font>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>Artificial Intelligence and Statistics (<b>AISTATS</b>)</i>, 2018.&nbsp;</span></font>
+	<br><br>
+
+
+	<font face="times new roman, serif" size="3">Symmetric Variational Autoencoder and Connections to Adversarial Learning 
+	[<a href="https://arxiv.org/abs/1709.01846" target="_blank" rel="nofollow">arXiv</a>]
+	<br>Liqun Chen, Shuyang Dai, Yunchen Pu, Chunyuan Li, Qinliang Su, Lawrence Carin<br></font>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>Artificial Intelligence and Statistics (<b>AISTATS</b>)</i>, 2018.&nbsp;</span></font>
+	<br><br>
 
 	<font face="times new roman, serif" size="3">Continuous-Time Flows for Deep Generative Models 
 	[<a href="https://arxiv.org/abs/1709.01179" target="_blank" rel="nofollow">arXiv</a>]
