--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ _.fk("gb_Qf");
 	</font><br></font>
 
 
-	<font face="times new roman, serif" size="3">Learning Structural Weight Uncertainty for Squential Decision-Making
+	<font face="times new roman, serif" size="3">Learning Structural Weight Uncertainty for Sequential Decision-Making
 	<br>Ruiyi Zhang, Chunyuan Li, Changyou Chen, Lawrence Carin<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>Artificial Intelligence and Statistics (<b>AISTATS</b>)</i>, 2018.&nbsp;</span></font>
 	<br><br>
