s2vgd arxiv added

--- a/index.html
+++ b/index.html
@@ -655,6 +655,7 @@ _.fk("gb_Qf");
 
 
 	<font face="times new roman, serif" size="3">Learning Structural Weight Uncertainty for Sequential Decision-Making
+	[<a href="https://arxiv.org/abs/1801.00085" target="_blank" rel="nofollow">arXiv</a>]
 	<br>Ruiyi Zhang, Chunyuan Li, Changyou Chen, Lawrence Carin<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>Artificial Intelligence and Statistics (<b>AISTATS</b>)</i>, 2018.&nbsp;</span></font>
 	<br><br>
