--- a/index.html
+++ b/index.html
@@ -602,8 +602,14 @@ _.fk("gb_Qf");
 <div style="display:block;text-align:left"><br></div>
 <div style="display:block;text-align:left"><br></div>
 
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
 
-<div style="display:block;text-align:left"><img border="0" height="70" src="./cli_page_files/svgd_vae_logo.png" style="background-color:transparent;font-size:10pt;line-height:1.2" width="200"></div>
+
+
+
 
 
 <div style="display:block;text-align:left"><br></div>
