--- a/index.html
+++ b/index.html
@@ -660,9 +660,9 @@ _.fk("gb_Qf");
 	</font><br></font>
 
 	<font face="times new roman, serif" size="3">Measuring the Intrinsic Dimension of Objective Landscapes
+	[<a href="https://openreview.net/forum?id=ryup8-WCW" target="_blank" rel="nofollow">Under Review</a>]
 	<br>Chunyuan Li, Heerad Farkhoor, Rosanne Liu, Jason Yosinski<br></font>
-	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2018.&nbsp; 
-	[<a href="https://openreview.net/forum?id=ryup8-WCW" target="_blank" rel="nofollow">Under Review</a>]</span></font>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2018.&nbsp; </span></font>
 	<br><br>
 
 	<font face="times new roman, serif" size="3">Learning Structural Weight Uncertainty for Sequential Decision-Making
