--- a/index.html
+++ b/index.html
@@ -588,9 +588,10 @@ _.fk("gb_Qf");
 <div style="display:block;text-align:left"><br></div>
 <div style="display:block;text-align:left"><br></div>
 
-<div style="display:block;text-align:left"><br></div>
-<div style="display:block;text-align:left"><br></div>
-<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><img border="0" height="70" src="./cli_page_files/d_int_iclr.png" style="background-color:transparent;font-size:10pt;line-height:1.2" width="200"></div>
+<div style="display:block;text-align:left"><br></div><div style="display:block;text-align:left"><br></div>
+
+
 
 <div style="display:block;text-align:left"><br></div>
 <div style="display:block;text-align:left"><br></div>
@@ -658,6 +659,9 @@ _.fk("gb_Qf");
 	<br>3) Unify ALI/BiGAN, CycleGAN/DiscoGAN/DualGAN and Conditional GAN as joint distribution matching
 	<br>
 	</font><br></font>
+
+	<div style="display:block;text-align:left"><br></div>
+
 
 	<font face="times new roman, serif" size="3">Measuring the Intrinsic Dimension of Objective Landscapes
 	[<a href="https://openreview.net/forum?id=ryup8-WCW" target="_blank" rel="nofollow">Under Review</a>]
