--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ _.fk("gb_Qf");
 
 	<font face="times new roman, serif" size="3">Continuous-Time Flows for Deep Generative Models 
 	[<a href="https://arxiv.org/abs/1709.01179" target="_blank" rel="nofollow">arXiv</a>]
-	<br>Changyou Chen, Chunyuan Li, Liqun Chen, Wenlin Wang, Yunchen Pu, Lawrence Carin<br></font><font color="#f9cb9c" face="verdana, sans-serif">Amortized SG-MCMC for efficient local variable inference, with applications to VAEs and GANs</font>
+	<br>Changyou Chen, Chunyuan Li, Liqun Chen, Wenlin Wang, Yunchen Pu, Lawrence Carin<br></font><font color="#f9cb9c" face="verdana, sans-serif">Amortized MCMC for efficient local variable inference, with applications to VAEs and GANs</font>
 
 	<br><br>
 	<font face="times new roman, serif" size="3">VAE Learning via Stein Variational Gradient Descent
@@ -705,7 +705,16 @@ _.fk("gb_Qf");
 	<i style="font-size:medium;font-family:times new roman,serif;color:rgb(0,0,0)">Neural Information Processing Systems (<b>NIPS</b>)</i><font color="#000000" style="font-size:medium;font-family:times new roman,serif">, 2017</font>
 
 
-	<br><br><font color="#000000" style="font-size:medium;font-family:times new roman,serif">Learning Weight Uncertainty with Stochastic Gradient MCMC for Shape Classification [<a href="http://people.duke.edu/~cl319/doc/papers/dbnn_shape_cvpr.pdf" target="_blank" rel="nofollow">PDF</a>]</font><font color="#000000" style="font-size:medium;font-family:times new roman,serif">&nbsp;[<a href="http://people.duke.edu/~cl319/doc/papers/SGMCMC_shape.pdf" target="_blank" rel="nofollow">Slides</a>]</font><font color="#000000" style="font-size:medium;font-family:times new roman,serif">&nbsp;[<a href="http://people.duke.edu/~cl319/doc/papers/shapes_poster.pdf" target="_blank" rel="nofollow">Poster</a>]</font></span><br>
+	<br><br><font color="#000000" style="font-size:medium;font-family:times new roman,serif">Learning Weight Uncertainty with Stochastic Gradient MCMC for Shape Classification 
+	[<a href="http://people.duke.edu/~cl319/doc/papers/dbnn_shape_cvpr.pdf" target="_blank" rel="nofollow">PDF</a>]
+	</font><font color="#000000" style="font-size:medium;font-family:times new roman,serif">&nbsp;
+	[<a href="http://people.duke.edu/~cl319/doc/papers/SGMCMC_shape.pdf" target="_blank" rel="nofollow">Slides</a>]
+	</font><font color="#000000" style="font-size:medium;font-family:times new roman,serif">&nbsp;
+	[<a href="http://people.duke.edu/~cl319/doc/papers/shapes_poster.pdf" target="_blank" rel="nofollow">Poster</a>]
+	</font><font color="#000000" style="font-size:medium;font-family:times new roman,serif">&nbsp;
+	[<a href="http://chunyuan.li/doc/dropout_SGLD.pdf" target="_blank" rel="nofollow">Illustration</a>]	
+	</font></span>
+	<br>
 <font size="3" style="font-family:times new roman,serif"><font color="#000000"><span style="line-height:normal">Chunyuan Li, Andrew Stevens, Changyou Chen, Yunchen Pu, Zhe Gan and Lawrence Carin</span><br></font>
 </font></span><span style="text-align:left"><span style="line-height:normal"><i style="font-family:times new roman,serif;font-size:medium;color:rgb(0,0,0)">Computer Vision and Pattern Recognition (<b>CVPR</b>)</i><font color="#000000" style="font-family:times new roman,serif;font-size:medium">, 2016.&nbsp;</font><font size="3" style="color:rgb(255,153,0);font-family:times new roman,serif">Spotlight Presentation</font><br><font color="#f9cb9c" face="verdana, sans-serif" size="2">Equivalence&nbsp;between Dropout and SGLD;&nbsp;SG-MCMC for computer vision.<br></font></span><br></span>
 
