--- a/index.html
+++ b/index.html
@@ -707,11 +707,12 @@ _.fk("gb_Qf");
 
 	<br><br><font color="#000000" style="font-size:medium;font-family:times new roman,serif">Learning Weight Uncertainty with Stochastic Gradient MCMC for Shape Classification 
 	[<a href="http://people.duke.edu/~cl319/doc/papers/dbnn_shape_cvpr.pdf" target="_blank" rel="nofollow">PDF</a>]
-	</font><font color="#000000" style="font-size:medium;font-family:times new roman,serif">&nbsp;
+	</font>
+	<font color="#000000" style="font-size:medium;font-family:times new roman,serif">
 	[<a href="http://people.duke.edu/~cl319/doc/papers/SGMCMC_shape.pdf" target="_blank" rel="nofollow">Slides</a>]
-	</font><font color="#000000" style="font-size:medium;font-family:times new roman,serif">&nbsp;
+	</font><font color="#000000" style="font-size:medium;font-family:times new roman,serif">
 	[<a href="http://people.duke.edu/~cl319/doc/papers/shapes_poster.pdf" target="_blank" rel="nofollow">Poster</a>]
-	</font><font color="#000000" style="font-size:medium;font-family:times new roman,serif">&nbsp;
+	</font><font color="#000000" style="font-size:medium;font-family:times new roman,serif">
 	[<a href="http://chunyuan.li/doc/dropout_SGLD.pdf" target="_blank" rel="nofollow">Illustration</a>]	
 	</font></span>
 	<br>
