--- a/index.html
+++ b/index.html
@@ -662,13 +662,23 @@ _.fk("gb_Qf");
 
 	<div style="display:block;text-align:left"><br></div>
 
-
 	<font face="times new roman, serif" size="3">Measuring the Intrinsic Dimension of Objective Landscapes
 	[<a href="https://openreview.net/pdf?id=ryup8-WCW" target="_blank" rel="nofollow">PDF</a>]
 	[<a href="https://openreview.net/forum?id=ryup8-WCW" target="_blank" rel="nofollow">Review</a>]
 	<br>Chunyuan Li, Heerad Farkhoor, Rosanne Liu, Jason Yosinski<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2018.&nbsp; </span></font>
-	<br><br>
+	<br><br>	
+	<div style="display:block;text-align:left"><br></div>
+
+
+	<font face="times new roman, serif" size="3">Learning to Sample with Adversarially Learned Likelihood-Ratio
+	[<a href="https://openreview.net/pdf?id=S1eZGHkDM" target="_blank" rel="nofollow">PDF</a>]
+	<br>Chunyuan Li, Jianqiao Li, Guoyin Wang and Lawrence Carin<br></font>
+	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
+	An adversarial framework to synthesize samples for a set of samples or an unnormalized distribution
+	<br>
+	</font><br></font>	
+	<div style="display:block;text-align:left"><br></div>
 
 	<font face="times new roman, serif" size="3">Learning Structural Weight Uncertainty for Sequential Decision-Making
 	[<a href="https://arxiv.org/abs/1801.00085" target="_blank" rel="nofollow">arXiv</a>]
