--- a/index.html
+++ b/index.html
@@ -586,7 +586,6 @@ _.fk("gb_Qf");
 <td style="width:16px;height:743px">&nbsp;</td><td style="width:230px"><div style="text-align:left"><div style="text-align:left;display:block"><div style="display:block;text-align:left"><div style="display:block;text-align:left"><div style="display:block;text-align:left"><div style="display:block;text-align:left"><span style="background-color:transparent;font-size:10pt"><br></span></div><div style="display:block;text-align:left"><span style="background-color:transparent;font-size:10pt"><div style="display:block;text-align:left"><img border="0" height="71" src="./cli_page_files/alice_logo.png" style="display:block;margin-right:auto;text-align:left" width="200"></div><br></span></div>
 
 <div style="display:block;text-align:left"><br></div>
-<div style="display:block;text-align:left"><br></div>
 
 <div style="display:block;text-align:left"><img border="0" height="70" src="./cli_page_files/d_int_iclr.png" style="background-color:transparent;font-size:10pt;line-height:1.2" width="200"></div>
 <div style="display:block;text-align:left"><br></div><div style="display:block;text-align:left"><br></div>
@@ -660,16 +659,16 @@ _.fk("gb_Qf");
 	<br>
 	</font><br></font>
 
-	<div style="display:block;text-align:left"><br></div>
-
 	<font face="times new roman, serif" size="3">Measuring the Intrinsic Dimension of Objective Landscapes
 	[<a href="https://openreview.net/pdf?id=ryup8-WCW" target="_blank" rel="nofollow">PDF</a>]
 	[<a href="https://openreview.net/forum?id=ryup8-WCW" target="_blank" rel="nofollow">Review</a>]
 	<br>Chunyuan Li, Heerad Farkhoor, Rosanne Liu, Jason Yosinski<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2018.&nbsp; </span></font>
-	<br><br>	
-	<div style="display:block;text-align:left"><br></div>
-
+	<br>
+	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
+	Training neural nets in a random subspace to find the least number of trainable parameters for a solution
+	<br>
+	</font><br></font>
 
 	<font face="times new roman, serif" size="3">Learning to Sample with Adversarially Learned Likelihood-Ratio
 	[<a href="https://openreview.net/pdf?id=S1eZGHkDM" target="_blank" rel="nofollow">PDF</a>]
@@ -678,7 +677,6 @@ _.fk("gb_Qf");
 	An adversarial framework to synthesize samples for a set of samples or an unnormalized distribution
 	<br>
 	</font><br></font>	
-	<div style="display:block;text-align:left"><br></div>
 
 	<font face="times new roman, serif" size="3">Learning Structural Weight Uncertainty for Sequential Decision-Making
 	[<a href="https://arxiv.org/abs/1801.00085" target="_blank" rel="nofollow">arXiv</a>]
@@ -695,9 +693,10 @@ _.fk("gb_Qf");
 
 	<font face="times new roman, serif" size="3">Continuous-Time Flows for Deep Generative Models 
 	[<a href="https://arxiv.org/abs/1709.01179" target="_blank" rel="nofollow">arXiv</a>]
-	<br>Changyou Chen, Chunyuan Li, Liqun Chen, Wenlin Wang, Yunchen Pu, Lawrence Carin<br></font><font color="#f9cb9c" face="verdana, sans-serif">Amortized MCMC for efficient local variable inference, with applications to VAEs and GANs</font>
+	<br>Changyou Chen, Chunyuan Li, Liqun Chen, Wenlin Wang, Yunchen Pu, Lawrence Carin<br></font>
 
-	<br><br>
+
+	<br>
 	<font face="times new roman, serif" size="3">VAE Learning via Stein Variational Gradient Descent
 	[<a href="http://people.ee.duke.edu/~lcarin/SVAE.pdf" target="_blank" rel="nofollow">PDF</a>]
 	<br>Yunchen Pu, Zhe Gan, Ricardo Henao, Chunyuan Li, Shaobo Han, Lawrence Carin<br></font>
