--- a/index.html
+++ b/index.html
@@ -562,11 +562,14 @@ _.fk("gb_Qf");
 <td style="width:63px;height:21px"><font size="3">&nbsp;</font></td>
 </tr>
 <tr>
-<td style="width:19px;height:154px"><br></td><td style="width:967px;height:154px"><font size="3"><span style="line-height:19.2px"><br>My PhD research interests focus on the intersection of deep learning and Bayesian statistics --- enriching one with each other: <br>(1) <b>Bayesian Deep Learning</b>: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs <br>(2) <b>Deep Bayesian Learning</b>: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. <br>These tools have been applied to various domains, including computer vision, natural language processing and deep reinforcement learning <i>etc</i>.<br><br></span></font><table border="0" bordercolor="#888" cellspacing="0" style="font-size:13.3333px"><tbody style="line-height:14.6667px"><tr><td style="width:959px;height:19px"><font size="3"><span style="line-height:19.2px"><b><i>On the job market now, actively looking for Research Scientist positions</i></b>. <i>Please drop me an email, if you are interested.</i></span></font></td></tr></tbody></table><font size="3"><span style="line-height:19.2px"><br></span></font></td>
-<td style="width:63px;height:154px"><font size="3">&nbsp;</font></td>
+<td style="width:19px;height:100px"><br></td><td style="width:967px;height:100px"><font size="3"><span style="line-height:19.2px"><br>My PhD research interests focus on the intersection of deep learning and Bayesian statistics --- enriching one with each other: <br>(1) <b>Bayesian Deep Learning</b>: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs <br>(2) <b>Deep Bayesian Learning</b>: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. <br>These tools have been applied to various domains, including computer vision, natural language processing and deep reinforcement learning <i>etc</i>.
+</span></font>
+
+</td>
 </tr>
 <tr>
-<td style="width:19px;height:24px"></td><td style="width:967px;height:24px"><font size="3"><span style="line-height:19px">[Email:</span></font>&nbsp;<span style="background-color:transparent;line-height:19px"><a href="mailto:cl319@duke.edu" style="font-size:medium">cl319@duke.edu</a><font size="3">] [Tel.: 240-421-8352]</font>&nbsp;</span><font size="3" style="background-color:transparent"><span style="line-height:19px">[&nbsp;</span></font><span style="background-color:transparent;font-size:10pt;line-height:19px"><font size="3"><a href="https://github.com/ChunyuanLI" target="_blank" rel="nofollow">GitHub</a>&nbsp;] [&nbsp;</font></span><a href="https://scholar.google.com/citations?user=Zd7WmXUAAAAJ&amp;hl=en" style="background-color:transparent;font-size:medium;line-height:19px" target="_blank">Google Scholar</a><span style="background-color:transparent;font-size:10pt">&nbsp;</span><span style="background-color:transparent;font-size:medium;line-height:19px">] [<a href="https://www.linkedin.com/in/chunyuan-li-039b6a44/" target="_blank" rel="nofollow">Linkedin</a>] [<a href="http://chunyuan.li/CV_ChunyuanLi.pdf" target="_blank" rel="nofollow">CV</a>]</span>
+<td style="width:19px;height:24px"></td><td style="width:967px;height:24px"><font size="3">
+<span style="line-height:19px">[Email:</span></font>&nbsp;<span style="background-color:transparent;line-height:19px"><a href="mailto:cl319@duke.edu" style="font-size:medium">cl319@duke.edu</a><font size="3">] [Tel.: 240-421-8352]</font>&nbsp;</span><font size="3" style="background-color:transparent"><span style="line-height:19px">[&nbsp;</span></font><span style="background-color:transparent;font-size:10pt;line-height:19px"><font size="3"><a href="https://github.com/ChunyuanLI" target="_blank" rel="nofollow">GitHub</a>&nbsp;] [&nbsp;</font></span><a href="https://scholar.google.com/citations?user=Zd7WmXUAAAAJ&amp;hl=en" style="background-color:transparent;font-size:medium;line-height:19px" target="_blank">Google Scholar</a><span style="background-color:transparent;font-size:10pt">&nbsp;</span><span style="background-color:transparent;font-size:medium;line-height:19px">] [<a href="https://www.linkedin.com/in/chunyuan-li-039b6a44/" target="_blank" rel="nofollow">Linkedin</a>] [<a href="http://chunyuan.li/CV_ChunyuanLi.pdf" target="_blank" rel="nofollow">CV</a>]</span>
 <center style="text-align:left;color:rgb(68,68,68);line-height:15px;font-family:Arial,Verdana,sans-serif"></center>
 </td>
 <td style="width:63px;height:24px"></td></tr></tbody></table></span></center><center style="text-align:left"><center style="text-align:left"><br></center>
@@ -624,6 +627,12 @@ _.fk("gb_Qf");
 <div style="display:block;text-align:left"><br></div>
 <div style="display:block;text-align:left"><br></div>
 
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
+<div style="display:block;text-align:left"><br></div>
 
 
 
