--- a/index.html
+++ b/index.html
@@ -669,8 +669,12 @@ _.fk("gb_Qf");
 	</font><br></font>
 
 	<font face="times new roman, serif" size="3">Measuring the Intrinsic Dimension of Objective Landscapes
-	[<a href="https://openreview.net/pdf?id=ryup8-WCW" target="_blank" rel="nofollow">PDF</a>]
-	[<a href="https://openreview.net/forum?id=ryup8-WCW" target="_blank" rel="nofollow">Review</a>]
+	[<a href="https://arxiv.org/abs/1804.08838" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://eng.uber.com/intrinsic-dimension/" target="_blank" rel="nofollow">Blog</a>]
+	[<a href="https://www.youtube.com/watch?v=uSZWeRADTFI&t=1s" target="_blank" rel="nofollow">Youtube</a>]
+	[<a href="https://github.com/uber-research/intrinsic-dimension" target="_blank" rel="nofollow">Code</a>]
+	[<a href="ttp://chunyuan.li/doc/iclr_2018_poster_box.pdf" target="_blank" rel="nofollow">Poster</a>]
+
 	<br>Chunyuan Li, Heerad Farkhoor, Rosanne Liu, Jason Yosinski<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2018.&nbsp; </span></font>
 	<br>
