update intrinsic dim

--- a/index.html
+++ b/index.html
@@ -671,9 +671,9 @@ _.fk("gb_Qf");
 	<font face="times new roman, serif" size="3">Measuring the Intrinsic Dimension of Objective Landscapes
 	[<a href="https://arxiv.org/abs/1804.08838" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://eng.uber.com/intrinsic-dimension/" target="_blank" rel="nofollow">Blog</a>]
-	[<a href="https://www.youtube.com/watch?v=uSZWeRADTFI&t=1s" target="_blank" rel="nofollow">Youtube</a>]
+	[<a href="https://www.youtube.com/watch?v=uSZWeRADTFI&t=1s" target="_blank" rel="nofollow">YouTube</a>]
 	[<a href="https://github.com/uber-research/intrinsic-dimension" target="_blank" rel="nofollow">Code</a>]
-	[<a href="ttp://chunyuan.li/doc/iclr_2018_poster_box.pdf" target="_blank" rel="nofollow">Poster</a>]
+	[<a href="http://chunyuan.li/doc/iclr_2018_poster_box.pdf" target="_blank" rel="nofollow">Poster</a>]
 
 	<br>Chunyuan Li, Heerad Farkhoor, Rosanne Liu, Jason Yosinski<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2018.&nbsp; </span></font>
@@ -690,6 +690,17 @@ _.fk("gb_Qf");
 	An adversarial framework to synthesize samples for a set of samples or an unnormalized distribution
 	<br>
 	</font><br></font>	
+
+	<font face="times new roman, serif" size="3">Joint Word and Label Embeddings for Text Classification
+	<br>G. Wang, C. Li, W. Wang Y. Zhang, D. Shen, X. Zhang, R. Henao and L. Carin<br></font>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</i>, 2018.&nbsp;</span></font>
+	<br><br>
+
+	<font face="times new roman, serif" size="3">On Simple Word-Embedding-Based Models and Associated Pooling Mechanisms
+	<br>D. Shen, G. Wang, W. Wang, M. Min, Q. Su, Y. Zhang, C. Li, R. Henao and L. Carin<br></font>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</i>, 2018.&nbsp;</span></font>
+	<br><br>
+
 
 	<font face="times new roman, serif" size="3">Learning Structural Weight Uncertainty for Sequential Decision-Making
 	[<a href="https://arxiv.org/abs/1801.00085" target="_blank" rel="nofollow">arXiv</a>]
