arvix link for swem

--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ _.fk("gb_Qf");
 	<br><br>
 
 	<font face="times new roman, serif" size="3">On Simple Word-Embedding-Based Models and Associated Pooling Mechanisms
-	[<a href="http://people.ee.duke.edu/~lcarin/acl2018_swem.pdf" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://arxiv.org/pdf/1805.09843.pdf" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/dinghanshen/SWEM" target="_blank" rel="nofollow">Code</a>]
 	<br>D. Shen, G. Wang, W. Wang, M. Min, Q. Su, Y. Zhang, C. Li, R. Henao and L. Carin<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</i>, 2018.&nbsp;</span></font>
