add code to date

--- a/index.html
+++ b/index.html
@@ -690,6 +690,7 @@ _.fk("gb_Qf");
 
 	<font face="times new roman, serif" size="3">Adversarial Time-to-Event Modeling
 	[<a href="https://arxiv.org/abs/1804.03184" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/paidamoyo/adversarial_time_to_event" target="_blank" rel="nofollow">Code</a>]
 	<br>Paidamoyo Chapfuwa, Chenyang Tao, Chunyuan Li, C. Page, B. Goldstein, Lawrence Carin, Ricardo Henao<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>International Conference on Machine Learning (<b>ICML</b>)</i>, 2018.&nbsp;</span></font>
 	<br><br>	
