--- a/index.html
+++ b/index.html
@@ -684,6 +684,7 @@ _.fk("gb_Qf");
 	<br><br>
 
 	<font face="times new roman, serif" size="3">Policy Optimization as Wasserstein Gradient Flows
+	[<a href="http://people.ee.duke.edu/~lcarin/gf_reinforcement_icml2018.pdf" target="_blank" rel="nofollow">Paper</a>]
 	<br>Ruiyi Zhang, Changyou Chen, Chunyuan Li and Lawrence Carin<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal"><i>International Conference on Machine Learning (<b>ICML</b>)</i>, 2018.&nbsp;</span></font>
 	<br><br>
