reddit link added

--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ _.fk("gb_Qf");
 	[<a href="https://www.youtube.com/watch?v=uSZWeRADTFI&t=1s" target="_blank" rel="nofollow">YouTube</a>]
 	[<a href="https://github.com/uber-research/intrinsic-dimension" target="_blank" rel="nofollow">Code</a>]
 	[<a href="http://chunyuan.li/doc/iclr_2018_poster_box.pdf" target="_blank" rel="nofollow">Poster</a>]
-
+	[<a href="https://www.reddit.com/r/MachineLearning/comments/8f9dvm/ruberai_measuring_the_intrinsic_dimension_of/" target="_blank" rel="nofollow">Reddit</a>]
 	<br>Chunyuan Li, Heerad Farkhoor, Rosanne Liu, Jason Yosinski<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2018.&nbsp; </span></font>
