--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ _.fk("gb_Qf");
 </span>
 <div><font color="#bf9000" face="times new roman, serif" size="5">&nbsp; &nbsp; Recent papers</font></div>
 <div>
-<ul style="text-align:justify"><li><font face="times new roman, serif" size="4"><span style="line-height:21.6000003814697px"><b>Scalable Bayesian Methods for Deep Learning</b></span></font></li></ul>
+<ul style="text-align:justify"><li><font face="times new roman, serif" size="4"><span style="line-height:21.6000003814697px"><b>Scalable Bayesian Methods and Deep Learning</b></span></font></li></ul>
 
 
 
