--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ _.fk("gb_Qf");
 <tbody style="line-height:110%">
 <tr>
 <td style="width:19px;height:21px"><font size="3">&nbsp;</font></td>
-<td style="width:967px;height:21px"><font size="3">I am a PhD student on machine learning at Duke University, <font size="3" style="line-height:110%;background-color:transparent">advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font><span style="line-height:110%;font-size:10pt;background-color:transparent">.&nbsp;</span></td>
+<td style="width:967px;height:21px"><font size="3">I am a researcher at Microsoft Research, Redmond. I finished my PhD on macine learning at Duke University, <font size="3" style="line-height:110%;background-color:transparent">advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font><span style="line-height:110%;font-size:10pt;background-color:transparent">.&nbsp;</span></td>
 <td style="width:63px;height:21px"><font size="3">&nbsp;</font></td>
 </tr>
 <tr>
