--- a/index.html
+++ b/index.html
@@ -668,11 +668,12 @@ _.fk("gb_Qf");
 </td>
 <td style="width:857px;height:90px"><span style="text-align:left;color:rgb(0,0,0)">
 
-	<font face="times new roman, serif" size="3">Learning to Sample with Adversarially Learned Likelihood-Ratio
-	[<a href="https://openreview.net/pdf?id=S1eZGHkDM" target="_blank" rel="nofollow">Paper</a>]
-	<br>Chunyuan Li, Jianqiao Li, Guoyin Wang and Lawrence Carin<br></font>
-	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
-	An adversarial framework to synthesize samples for a set of samples or an unnormalized distribution
+	<font face="times new roman, serif" size="3">Communication-Efficient Stochastic Gradient MCMC for Neural Networks
+	[<a href="http://chunyuan.li/papers/aaai_2019_distributed.pdf" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="http://chunyuan.li/papers/aaai_2019_distributed_appendix.pdf" target="_blank" rel="nofollow">Appendix</a>]
+	<br>Chunyuan Li, Changyou Chen, Yunchen Pu, Ricardo Henao and Lawrence Carin<br></font>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>AAAI Conference of Artificial Intelligence (<b>AAAI</b>)</i>, 2019.&nbsp;</span></font>
 	<br>
 	</font><br></font>	
 
