--- a/index.html
+++ b/index.html
@@ -654,6 +654,32 @@ _.fk("gb_Qf");
 </table>
 
 
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:17px;height:90px">&nbsp;</td>
+<td valign=“middle” style="width:225px;height:90px">
+<img border="0" height="70" src="./logo/ras_scheme.png" style="background-color:transparent" width="205">
+
+</td>
+<td style="width:857px;height:90px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Adversarial Learning of a Sampler Based on an Unnormalized Distribution
+	[<a href="https://github.com/ChunyuanLI/RAS" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/ChunyuanLI/RAS" target="_blank" rel="nofollow">Code</a>]
+	<br>Chunyuan Li, Ke Bai, Jianqiao Li, Guoyin Wang, Changyou Chen, Lawrence Carin<br></font>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>Artificial Intelligence and Statistics (<b>AISTATS</b>)</i>, 2019.&nbsp; </span></font>
+	<br>
+	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
+	Learning to draw samples with adversarial training; The first algorithm for adversarial Soft Q-learning 
+	<br>
+	</font></font>
+
+</td>
+</tr>
+</tbody>
+</table>
+
 
 
 <table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
@@ -662,7 +688,9 @@ _.fk("gb_Qf");
 <td style="width:17px;height:90px">&nbsp;</td>
 <td valign=“middle” style="width:225px;height:90px">
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<img border="0" height="60" src="./logo/communication_efficient.png" style="background-color:transparent;font-size:10pt;line-height:1.2" width="200"></div>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <img border="0" height="80" src="./cli_page_files/fig_leam.png" style="background-color:transparent;font-size:10pt;line-height:1.2" width="200"></div>
 
 </td>
