--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ _.fk("gb_Qf");
 <td style="width:63px;height:21px"><font size="3">&nbsp;</font></td>
 </tr>
 <tr>
-<td style="width:19px;height:100px"><br></td><td style="width:967px;height:100px"><font size="3"><span style="line-height:19.2px"><br>My PhD research interests focus on the [<a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="nofollow">intersection of deep learning and Bayesian statistics</a>] --- enriching one with each other: <br>(1) <b>Bayesian Deep Learning</b>: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs <br>(2) <b>Deep Bayesian Learning</b>: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. <br>These tools have been applied to various domains, including computer vision, natural language processing and deep reinforcement learning <i>etc</i>.
+<td style="width:19px;height:100px"><br></td><td style="width:967px;height:100px"><font size="3"><span style="line-height:19.2px"><br>My PhD research interests focus on the <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="nofollow">intersection of deep learning and Bayesian statistics</a> --- enriching one with each other: <br>(1) <b>Bayesian Deep Learning</b>: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs <br>(2) <b>Deep Bayesian Learning</b>: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. <br>These tools have been applied to various domains, including computer vision, natural language processing and deep reinforcement learning <i>etc</i>.
 </span></font>
 
 </td>
