--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ _.fk("gb_Qf");
 </td>
 <td style="width:857px;height:90px"><span style="text-align:left;color:rgb(0,0,0)">
 	<font face="times new roman, serif" size="3">Adversarial Learning of a Sampler Based on an Unnormalized Distribution
-	[<a href="https://github.com/ChunyuanLI/RAS" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://arxiv.org/abs/1901.00612" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="https://github.com/ChunyuanLI/RAS" target="_blank" rel="nofollow">Code</a>]
 	<br>Chunyuan Li, Ke Bai, Jianqiao Li, Guoyin Wang, Changyou Chen, Lawrence Carin<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
