add aaai 2019 poster

--- a/index.html
+++ b/index.html
@@ -699,6 +699,7 @@ _.fk("gb_Qf");
 	<font face="times new roman, serif" size="3">Communication-Efficient Stochastic Gradient MCMC for Neural Networks
 	[<a href="http://chunyuan.li/papers/aaai_2019_distributed.pdf" target="_blank" rel="nofollow">Paper</a>]
 	[<a href="http://chunyuan.li/papers/aaai_2019_distributed_appendix.pdf" target="_blank" rel="nofollow">Appendix</a>]
+	[<a href="http://chunyuan.li/papers/aaai_2019_poster.pdf" target="_blank" rel="nofollow">Poster</a>]
 	<br>Chunyuan Li, Changyou Chen, Yunchen Pu, Ricardo Henao and Lawrence Carin<br></font>
 	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
 	<i>AAAI Conference of Artificial Intelligence (<b>AAAI</b>)</i>, 2019.&nbsp;</span></font>
