--- a/index.html
+++ b/index.html
@@ -558,18 +558,22 @@ _.fk("gb_Qf");
 <tbody style="line-height:110%">
 <tr>
 <td style="width:19px;height:21px"><font size="3">&nbsp;</font></td>
-<td style="width:967px;height:21px"><font size="3">I am a researcher at Microsoft Research, Redmond. I finished my PhD on macine learning at Duke University, <font size="3" style="line-height:110%;background-color:transparent">advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font><span style="line-height:110%;font-size:10pt;background-color:transparent">.&nbsp;</span></td>
+<td style="width:967px;height:21px"><font size="3">I am a researcher at Microsoft Research, Redmond. I finished my PhD in macine learning at Duke University, <font size="3" style="line-height:110%;background-color:transparent">advised by Prof.&nbsp;</font><font size="3"><a href="http://people.ee.duke.edu/~lcarin/" target="_blank" rel="nofollow">Lawrence Carin</a></font><span style="line-height:110%;font-size:10pt;background-color:transparent">.&nbsp;</span></td>
 <td style="width:63px;height:21px"><font size="3">&nbsp;</font></td>
 </tr>
 <tr>
-<td style="width:19px;height:100px"><br></td><td style="width:967px;height:100px"><font size="3"><span style="line-height:19.2px"><br>My PhD research interests focus on the <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="nofollow">intersection of deep learning and Bayesian statistics</a> --- enriching one with each other: <br>(1) <b>Bayesian Deep Learning</b>: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs <br>(2) <b>Deep Bayesian Learning</b>: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. <br>These tools have been applied to various domains, including computer vision, natural language processing and deep reinforcement learning <i>etc</i>.
+<td style="width:19px;height:100px"><br></td><td style="width:967px;height:100px"><font size="3"><span style="line-height:19.2px"><br>My PhD research interests focus on the <a href="http://chunyuan.li/doc/PhD_research_cli.pdf" target="_blank" rel="nofollow">intersection of deep learning and Bayesian statistics</a> 
+--- enriching one with each other: 
+<br>(1) <b>Bayesian Deep Learning</b>: Scalable Bayesian learning methods for the weight uncertainty of deep neural networks, <i>e.g.</i>, SG-MCMCs <br>(2) <b>Deep Bayesian Learning</b>: Deep neural networks as flexible representation methods in Bayesian models, <i>e.g</i>., GANs and VAEs. <br>These tools have been applied to various domains, including computer vision, natural language processing and deep reinforcement learning <i>etc</i>.
 </span></font>
 
 </td>
 </tr>
 <tr>
 <td style="width:19px;height:24px"></td><td style="width:967px;height:24px"><font size="3">
-<span style="line-height:19px">[Email:</span></font>&nbsp;<span style="background-color:transparent;line-height:19px"><a href="mailto:cl319@duke.edu" style="font-size:medium">chunyuan.li@hotmail.com</a><font size="3">] [Tel.: 240-421-8352]</font>&nbsp;</span><font size="3" style="background-color:transparent"><span style="line-height:19px">[&nbsp;</span></font><span style="background-color:transparent;font-size:10pt;line-height:19px"><font size="3"><a href="https://github.com/ChunyuanLI" target="_blank" rel="nofollow">GitHub</a>&nbsp;] [&nbsp;</font></span><a href="https://scholar.google.com/citations?user=Zd7WmXUAAAAJ&amp;hl=en" style="background-color:transparent;font-size:medium;line-height:19px" target="_blank">Google Scholar</a><span style="background-color:transparent;font-size:10pt">&nbsp;</span><span style="background-color:transparent;font-size:medium;line-height:19px">] [<a href="https://www.linkedin.com/in/chunyuan-li-039b6a44/" target="_blank" rel="nofollow">Linkedin</a>] [<a href="http://chunyuan.li/CV_ChunyuanLi.pdf" target="_blank" rel="nofollow">CV</a>]</span>
+<span style="line-height:19px">[Email:</span></font>&nbsp;<span style="background-color:transparent;line-height:19px"><a href="mailto:cl319@duke.edu" style="font-size:medium">chunyuan.li@hotmail.com</a><font size="3">]</font>&nbsp;</span><font size="3" style="background-color:transparent"><span style="line-height:19px">[&nbsp;</span></font><span style="background-color:transparent;font-size:10pt;line-height:19px"><font size="3"><a href="https://github.com/ChunyuanLI" target="_blank" rel="nofollow">GitHub</a>&nbsp;] [&nbsp;</font></span><a href="https://scholar.google.com/citations?user=Zd7WmXUAAAAJ&amp;hl=en" style="background-color:transparent;font-size:medium;line-height:19px" target="_blank">Google Scholar</a><span style="background-color:transparent;font-size:10pt">&nbsp;</span><span style="background-color:transparent;font-size:medium;line-height:19px">] [<a href="https://www.linkedin.com/in/chunyuan-li-039b6a44/" target="_blank" rel="nofollow">Linkedin</a>] [<a href="http://chunyuan.li/CV_ChunyuanLi.pdf" target="_blank" rel="nofollow">CV</a>]
+<a href="http://chunyuan.li/doc/dissertation_cli.pdf" target="_blank" rel="nofollow">[Dissertation]</a> 
+</span>
 <center style="text-align:left;color:rgb(68,68,68);line-height:15px;font-family:Arial,Verdana,sans-serif"></center>
 </td>
 <td style="width:63px;height:24px"></td></tr></tbody></table></span></center><center style="text-align:left"><center style="text-align:left"><br></center>
@@ -644,10 +648,48 @@ _.fk("gb_Qf");
 	<i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2018.&nbsp; </span></font>
 	<br>
 	<font color="#f9cb9c"><font face="verdana, sans-serif" size="2">
-	Training neural nets in a random subspace to find the least number of trainable parameters for a solution
+	Training neural nets in a random subspace to find the minimum number of trainable parameters for a solution
 	<br>
 	</font></font>
 
+</td>
+</tr>
+</tbody>
+</table>
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:25px;height:60px">&nbsp;</td>
+<td valign=“middle” style="width:225px;height:60px">
+</td>
+<td style="width:857px;height:60px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Cyclical Stochastic Gradient MCMC for Bayesian Deep Learning
+	[<a href="https://arxiv.org/pdf/1902.03932.pdf" target="_blank" rel="nofollow">Paper</a>]
+	[<a href="https://github.com/ruqizhang/csgmcmc" target="_blank" rel="nofollow">Code</a>]
+	<br>Ruqi Zhang, Chunyuan Li, Jianyi Zhang, Changyou Chen, Andrew Gordon Wilson</font>
+</td>
+</tr>
+</tbody>
+</table>
+
+
+<table border="0" bordercolor="#888" cellspacing="0" style="border-width:0px;border-color:rgb(136,136,136);text-align:justify;border-collapse:collapse">
+<tbody>
+<tr>
+<td style="width:17px;height:80px">&nbsp;</td>
+<td valign=“middle” style="width:225px;height:80px">
+<img border="0" height="70" width="140" src="./logo/two_paths_vae_atg.png" style="background-color:transparent">
+
+</td>
+<td style="width:857px;height:80px"><span style="text-align:left;color:rgb(0,0,0)">
+	<font face="times new roman, serif" size="3">Cyclical Annealing Schedule: A Simple Approach to Mitigating KL Vanishing
+	[<a href="https://chunyuan.li/papers/naacl2019_cyclical.pdf" target="_blank" rel="nofollow">Paper</a>]
+	<br>Hao Fu*,Chunyuan Li*, Xiaodong Liu, Jianfeng Gao, Asli Celikyilmaz, Lawrence Carin (* Equal contribution)<br></font>
+	<font color="#000000" face="times new roman, serif" size="3"><span style="line-height:normal">
+	<i>North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>)</i>, 2019.&nbsp; </span></font>
+	</font></font>
 </td>
 </tr>
 </tbody>
